--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FlyMultiverse</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="error_message">Something went wrong! Please check your internet connection.</string>
 </resources>
